Task-1/cross_reference.tf
############################################################################################################################################
############################################################################################################################################
#### Create cross references security group rule for both VPC                                                                           ####
############################################################################################################################################
############################################################################################################################################

# resource "aws_security_group_rule" "harsh-viradia-cross-ref" {
#   type = "ingress"
#   from_port = 80
#   to_port = 80
#   protocol = "tcp"
#   source_security_group_id = aws_security_group.harsh-viradia-web-sg.id
#   security_group_id = aws_security_group.harsh-viradia-security-sg.id
# }
