Task-1/security-sg.tf
resource "aws_security_group" "harsh-viradia-security-sg" {
  name = "harsh-viradia-security-sg"
  vpc_id = aws_vpc.harsh-viradia-security-vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    "Name" = "harsh-viradia-security-sg"
  }
}
